--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,17 +21,19 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".ui.RecordListActivity"
             android:label="@string/title_activity_record_list" >
         </activity>
-        <!--<activity-->
-            <!--android:name=".ui.MainActivity"-->
-            <!--android:label="@string/title_activity_record_list" >-->
-        <!--</activity>-->
+        <!-- <activity -->
+        <!-- android:name=".ui.MainActivity" -->
+        <!-- android:label="@string/title_activity_record_list" > -->
+        <!-- </activity> -->
 
-
+        <activity
+            android:name=".ui.SettingsActivity"
+            android:label="@string/title_activity_settings" >
+        </activity>
     </application>
 
 </manifest>
