--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,11 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:22.2.0'
     compile 'com.android.support:support-v4:22.2.0'
+    compile files('libs/baidu-android-openapi-sdk.jar')
+    compile files('libs/gson-2.2.4-sources.jar')
+    compile files('libs/gson-2.2.4.jar')
+    compile files('libs/Baidu-Frontia-Android-2.0.7.jar')
 }
