--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,10 +2,21 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.alpha.sound_recorder_app" >
 
+    <uses-sdk
+        android:minSdkVersion="11"
+        android:targetSdkVersion="19" />
+
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
+
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+
 
     <application
         android:allowBackup="true"
@@ -36,13 +47,14 @@
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
-            android:theme="@style/AppTheme"
             android:name=".ui.SearchActivity"
-            android:label="@string/searchword" >
+            android:label="@string/searchword"
+            android:theme="@style/AppTheme" >
+        </activity>
+        <activity
+            android:name=".ui.ShareActivity"
+            android:label="@string/title_activity_share" >
         </activity>
     </application>
-    <uses-sdk
-        android:minSdkVersion="11"
-        android:targetSdkVersion="19" />
 
 </manifest>
