--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile files('libs/gson-2.2.4-sources.jar')
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/Baidu-Frontia-Android-2.0.7.jar')
+    compile files('libs/qiniu-android-sdk-7.0.7.jar')
 }
