--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,9 @@ dependencies {
     compile files('libs/gson-2.2.4-sources.jar')
     compile files('libs/gson-2.2.4.jar')
     compile files('libs/Baidu-Frontia-Android-2.0.7.jar')
-    compile files('libs/qiniu-android-sdk-7.0.7.jar')
+    compile files('libs/qiniuyun-api-zhb.jar')
+    compile files('libs/eventbus.jar')
+    compile files('libs/android-async-http-1.4.6.jar')
+    compile files('libs/httpmime-4.2.6.jar')
+    compile files('libs/qiniu-android-sdk-7.0.1.jar')
 }
