--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
     <!--<android:uses-permission android:name="android.permission.READ_PHONE_STATE" />-->
     <android:uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
+
+    <uses-permission android:name="android.permission.RUN_INSTRUMENTATION" />
+
     <!--<uses-permission android:name="android.permission.INTERNET" />-->
     <!--<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />-->
     <!-- Frontia框架的权限 -->
@@ -69,7 +72,6 @@
         </activity>
         <activity
             android:name=".ui.ShareActivity"
-            android:launchMode="singleTask"
             android:label="@string/title_activity_share" >
         </activity>
 
