--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,7 @@
 
         <activity
             android:name=".ui.SettingsActivity"
+            android:theme="@style/settings_style"
             android:label="@string/title_activity_settings" >
         </activity>
         <activity
